crates/bevy_reflect/compile_fail/tests/remote.rs
fn main() -> compile_fail_utils::ui_test::Result<()> {
    compile_fail_utils::test("reflect_remote", "tests/reflect_remote")
}
